# docs/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /api/v1
 definitions:
+  middleware.Login:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
   model.Todo:
     properties:
       _id:
@@ -33,10 +43,35 @@ info:
   title: Gin Todo API
   version: "1.0"
 paths:
+  /login:
+    post:
+      operationId: login
+      parameters:
+      - description: Login credentials
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/middleware.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Todo'
+      summary: Login
+      tags:
+      - Auth
   /todos:
     get:
       description: Get all todos without any filtering
       operationId: get-all-todos
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        type: string
       produces:
       - application/json
       responses:
@@ -46,7 +81,11 @@ paths:
             items:
               $ref: '#/definitions/model.Todo'
             type: array
+      security:
+      - JWT: []
       summary: Get all todos
+      tags:
+      - Todos
     post:
       operationId: create-todo
       parameters:
@@ -56,6 +95,10 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/model.TodoDocInput'
+      - description: Authorization
+        in: header
+        name: Authorization
+        type: string
       produces:
       - application/json
       responses:
@@ -63,7 +106,11 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Todo'
+      security:
+      - JWT: []
       summary: Create a todo
+      tags:
+      - Todos
   /todos/{id}:
     delete:
       operationId: delete-todo-by-id
@@ -73,6 +120,10 @@ paths:
         name: id
         required: true
         type: string
+      - description: Authorization
+        in: header
+        name: Authorization
+        type: string
       produces:
       - application/json
       responses:
@@ -80,7 +131,11 @@ paths:
           description: No Content
           schema:
             $ref: '#/definitions/model.Todo'
+      security:
+      - JWT: []
       summary: Delete a todo
+      tags:
+      - Todos
     get:
       operationId: get-todo-by-id
       parameters:
@@ -89,6 +144,10 @@ paths:
         name: id
         required: true
         type: string
+      - description: Authorization
+        in: header
+        name: Authorization
+        type: string
       produces:
       - application/json
       responses:
@@ -96,7 +155,11 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Todo'
+      security:
+      - JWT: []
       summary: Get a TODO by ID
+      tags:
+      - Todos
     put:
       operationId: update-todo-by-id
       parameters:
@@ -111,6 +174,10 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/model.TodoDocInput'
+      - description: Authorization
+        in: header
+        name: Authorization
+        type: string
       produces:
       - application/json
       responses:
@@ -118,8 +185,17 @@ paths:
           description: No Content
           schema:
             $ref: '#/definitions/model.Todo'
+      security:
+      - JWT: []
       summary: Update a TODO by ID
+      tags:
+      - Todos
 schemes:
 - http
 - https
+securityDefinitions:
+  JWT:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
