# middleware/jwt_middleware.go
@@ -1,0 +1,114 @@
+package middleware
+
+import (
+	"log"
+	"os"
+	"time"
+
+	jwt "github.com/appleboy/gin-jwt/v2"
+	"github.com/gin-gonic/gin"
+)
+
+type Login struct {
+	Username string `form:"username" json:"username" binding:"required"`
+	Password string `form:"password" json:"password" binding:"required"`
+}
+
+var (
+	identityKey = "id"
+)
+
+type User struct {
+	UserName  string
+	FirstName string
+	LastName  string
+}
+
+func HandlerMiddleware(authMiddleware *jwt.GinJWTMiddleware) gin.HandlerFunc {
+	return func(context *gin.Context) {
+		errInit := authMiddleware.MiddlewareInit()
+		if errInit != nil {
+			log.Fatal("authMiddleware.MiddlewareInit() Error:" + errInit.Error())
+		}
+	}
+}
+
+func InitJWTParams() *jwt.GinJWTMiddleware {
+
+	return &jwt.GinJWTMiddleware{
+		Realm:       "test zone",
+		Key:         []byte(os.Getenv("SECRET_KEY")),
+		Timeout:     time.Hour,
+		MaxRefresh:  time.Hour,
+		IdentityKey: identityKey,
+		PayloadFunc: payloadFunc(),
+
+		IdentityHandler: identityHandler(),
+		Authenticator:   authenticator(),
+		Authorizator:    authorizator(),
+		Unauthorized:    unauthorized(),
+		TokenLookup:     "header: Authorization, query: token, cookie: jwt",
+		// TokenLookup: "query:token",
+		// TokenLookup: "cookie:token",
+		TokenHeadName: "Bearer",
+		TimeFunc:      time.Now,
+	}
+}
+
+func payloadFunc() func(data interface{}) jwt.MapClaims {
+	return func(data interface{}) jwt.MapClaims {
+		if v, ok := data.(*User); ok {
+			return jwt.MapClaims{
+				identityKey: v.UserName,
+			}
+		}
+		return jwt.MapClaims{}
+	}
+}
+
+func identityHandler() func(c *gin.Context) interface{} {
+	return func(c *gin.Context) interface{} {
+		claims := jwt.ExtractClaims(c)
+		return &User{
+			UserName: claims[identityKey].(string),
+		}
+	}
+}
+
+func authenticator() func(c *gin.Context) (interface{}, error) {
+	return func(c *gin.Context) (interface{}, error) {
+		var loginVals Login
+		if err := c.ShouldBind(&loginVals); err != nil {
+			return "", jwt.ErrMissingLoginValues
+		}
+		userID := loginVals.Username
+		password := loginVals.Password
+
+		if (userID == "admin" && password == "admin") || (userID == "test" && password == "test") {
+			return &User{
+				UserName:  userID,
+				LastName:  "Patterson",
+				FirstName: "Charles",
+			}, nil
+		}
+		return nil, jwt.ErrFailedAuthentication
+	}
+}
+
+func authorizator() func(data interface{}, c *gin.Context) bool {
+	return func(data interface{}, c *gin.Context) bool {
+		if v, ok := data.(*User); ok && v.UserName == "admin" {
+			return true
+		}
+		return false
+	}
+}
+
+func unauthorized() func(c *gin.Context, code int, message string) {
+	return func(c *gin.Context, code int, message string) {
+		c.JSON(code, gin.H{
+			"code":    code,
+			"message": message,
+		})
+	}
+}
